Fix theme selection in mobile settings page going off screen

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -8,3 +8,9 @@
     padding-top: 4px;
     padding-bottom: 4px;
 }
+
+.UserPage .item-fof-nightmode .Settings-theme {
+    .Select, .Select-input {
+        width: 100%;
+    }
+}
